List and list groups

--- a/scss/molecules/lists/_lists.scss
+++ b/scss/molecules/lists/_lists.scss
@@ -1,1 +1,83 @@
 @import "extends";
+
+/*doc
+#Lists
+
+###Unordered list
+
+```
+<ul>
+  <li>list item 1</li>
+  <li>list item 1
+    <ul>
+      <li>list item 2</li>
+      <li>list item 2
+        <ul>
+          <li>list item 3</li>
+          <li>list item 3</li>
+        </ul>
+      </li>
+      <li>list item 2</li>
+      <li>list item 2</li>
+    </ul>
+  </li>
+  <li>list item 1</li>
+  <li>list item 1</li>
+</ul>
+```
+*/
+
+/*doc
+###Ordered list
+
+```
+<ol>
+  <li>list item 1</li>
+  <li>list item 1
+    <ol>
+      <li>list item 2</li>
+      <li>list item 2
+        <ol>
+          <li>list item 3</li>
+          <li>list item 3</li>
+        </ol>
+      </li>
+      <li>list item 2</li>
+      <li>list item 2</li>
+    </ol>
+  </li>
+  <li>list item 1</li>
+  <li>list item 1</li>
+</ol>
+```
+*/
+
+/*doc
+###Description list
+
+```
+<dl>
+  <dt>Description name</dt>
+  <dd>Description value Lorem ipsum dolor sit amet, consectetur adipisicing elit. Similique, doloribus corporis modi tempora porro totam quia. Laborum, cum, cumque, nobis, ullam tempora ducimus recusandae possimus amet eligendi non saepe dignissimos!</dd>
+  <dt>Description name</dt>
+  <dd>Description value Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam ex voluptatibus enim itaque molestiae consectetur optio dignissimos sunt assumenda mollitia. Iste, voluptatum repellat magni laborum reiciendis impedit ipsa nostrum dolore.</dd>
+  <dt>Description name</dt>
+  <dd>Description value Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis, minus, sunt obcaecati necessitatibus pariatur quod expedita vero modi ducimus fugiat tenetur distinctio nostrum aspernatur labore natus quo inventore. Non, ducimus!</dd>
+  <dt>Description name</dt>
+  <dd>Description value Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia, minima, delectus, obcaecati, inventore temporibus magni quidem laudantium esse nemo eum dignissimos molestias omnis deleniti rem vero quibusdam ea ut aliquid!</dd>
+</dl>
+```
+*/
+
+
+
+.no-bullet {
+  list-style: none;
+}
+
+.horizontal-list {
+  list-style: none;
+  > li {
+    display: inline-block;
+  }
+}
