Pagination clearing floats

--- a/scss/organisms/pagination/_pagination.scss
+++ b/scss/organisms/pagination/_pagination.scss
@@ -4,6 +4,7 @@
 ---------------------
 
 ```
+<div class="row">
   <ul class="pagination">
     <li class="disabled"><a href="#">«</a></li>
     <li class="active"><a href="#">1</a></li>
@@ -13,6 +14,7 @@
     <li><a href="#">5</a></li>
     <li><a href="#">»</a></li>
   </ul>
+</div>
 ```
 
 */
