--- a/scss/atoms/helpers/_utilities.scss
+++ b/scss/atoms/helpers/_utilities.scss
@@ -3,3 +3,19 @@ $global-radius: 2px;
 $global-radius-2x: 4px;
 $global-padding: 1em;
 $global-margin: 1em;
+
+
+//-- Z-index master list Ported from bootstrap
+//
+// Warning: Avoid customizing these values. They're used for a bird's eye view
+// of components dependent on the z-axis and are designed to all work together.
+//
+// Note: These variables are not generated into the Customizer.
+
+$zindex-navbar:            1000 !default;
+$zindex-dropdown:          1000 !default;
+$zindex-popover:           1060 !default;
+$zindex-tooltip:           1070 !default;
+$zindex-navbar-fixed:      1030 !default;
+$zindex-modal-background:  1040 !default;
+$zindex-modal:             1050 !default;
