--- a/scss/molecules/lists/_variables.scss
+++ b/scss/molecules/lists/_variables.scss
@@ -1,3 +1,15 @@
 @import "../../atoms/globals.scss";
 
 // Widget specific settings
+
+/*doc
+#Horizontal list
+```
+<ul class="horizontal-list">
+  <li>lorem</li>
+  <li>lorem Ipsum</li>
+  <li>dolor</li>
+</ul>
+```
+
+*/
