[todo] slider UI

--- a/scss/molecules/sliders/_sliders.scss
+++ b/scss/molecules/sliders/_sliders.scss
@@ -1,1 +1,14 @@
 @import "extends";
+
+/*doc
+#Sliders
+---------------
+
+```
+<div class="range-slider" data-slider>
+  <span class="range-slider-handle"></span>
+  <span class="range-slider-active-segment"></span>
+  <input type="hidden">
+</div>
+```
+*/
