--- a/scss/style.scss
+++ b/scss/style.scss
@@ -34,11 +34,13 @@
 @import "organisms/button-groups/button-groups";
 @import "organisms/breadcrumbs/breadcrumbs";
 @import "organisms/pagination/pagination";
-@import "organisms/tabs/tabs";
 @import "organisms/list-group/list-group";
 @import "organisms/modals/modals";
 @import "organisms/cards/cards";
 @import "organisms/media-object/media-object";
+@import "organisms/growl/growl";
+@import "organisms/feedback-buttons/feedback-buttons";
+@import "organisms/knobs/knobs";
 
 // Import Templates
 
