--- a/scss/style.scss
+++ b/scss/style.scss
@@ -30,17 +30,18 @@
 
 // Import Organisms
 
-@import "organisms/alerts/alerts";
-@import "organisms/button-groups/button-groups";
-@import "organisms/breadcrumbs/breadcrumbs";
-@import "organisms/pagination/pagination";
-@import "organisms/list-group/list-group";
-@import "organisms/modals/modals";
-@import "organisms/cards/cards";
-@import "organisms/media-object/media-object";
-@import "organisms/growl/growl";
-@import "organisms/feedback-buttons/feedback-buttons";
-@import "organisms/knobs/knobs";
+@import "organisms/alerts";
+@import "organisms/button-groups";
+@import "organisms/breadcrumbs";
+@import "organisms/pagination";
+@import "organisms/list-group";
+@import "organisms/modals";
+@import "organisms/cards";
+@import "organisms/media-object";
+@import "organisms/growl";
+@import "organisms/feedback-buttons";
+@import "organisms/knobs";
+@import "organisms/pie-chart";
 
 // Import Templates
 
