Sparklines for inline graphs

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -42,6 +42,7 @@
 @import "organisms/feedback-buttons";
 @import "organisms/knobs";
 @import "organisms/pie-chart";
+@import "organisms/sparklines";
 
 // Import Templates
 
