Datepicker widget and styling

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -43,6 +43,8 @@
 @import "organisms/knobs";
 @import "organisms/pie-chart";
 @import "organisms/sparklines";
+@import "organisms/stroll";
+@import "organisms/datepicker";
 
 // Import Templates
 
