--- a/scss/style.scss
+++ b/scss/style.scss
@@ -31,6 +31,7 @@
 // Import Organisms
 
 @import "organisms/alerts";
+@import "organisms/autocomplete";
 @import "organisms/button-groups";
 @import "organisms/breadcrumbs";
 @import "organisms/pagination";
