--- a/scss/style.scss
+++ b/scss/style.scss
@@ -34,11 +34,13 @@
 @import "organisms/autocomplete";
 @import "organisms/button-groups";
 @import "organisms/breadcrumbs";
+@import "organisms/file-upload";
 @import "organisms/pagination";
 @import "organisms/list-group";
 @import "organisms/modals";
 @import "organisms/cards";
 @import "organisms/media-object";
+@import "organisms/notes";
 @import "organisms/growl";
 @import "organisms/feedback-buttons";
 @import "organisms/knobs";
