--- a/scss/organisms/_media-object.scss
+++ b/scss/organisms/_media-object.scss
@@ -13,24 +13,6 @@ Create notifications, comments and other elements
     <div class="media-body">
       <h4 class="media-heading">Media heading</h4>
       <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima, veritatis.</span>
-      <div class="media">
-        <a class="pull-left" href="#">
-          <img class="media-object img-circle" src="http://placehold.it/45x45" alt="...">
-        </a>
-        <div class="media-body">
-          <h4 class="media-heading">Media heading</h4>
-          <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima, veritatis.</span>
-        </div>
-      </div>
-      <div class="media">
-        <a class="pull-left" href="#">
-          <img class="media-object img-circle" src="http://placehold.it/45x45" alt="...">
-        </a>
-        <div class="media-body">
-          <h4 class="media-heading">Media heading</h4>
-          <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima, veritatis.</span>
-        </div>
-      </div>
     </div>
   </div>
   <div class="media">
@@ -55,10 +37,19 @@ Create notifications, comments and other elements
 ```
 */
 
+.media {
+  @include clearfix();
+  margin-bottom: 1em;
+}
+
 .media-object {
   margin-right: 1em;
 }
 
 .media-heading {
   font-weight: 300;
+}
+
+.media-body {
+  margin-bottom: 1em;
 }
